[project]
name = "online-cinema"
version = "0.1.0"
description = "Online cinema project with FastAPI."
authors = [
    {name = "Ermolenko Andrey",email = "f1nd6r@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "stripe (>=14.4.1,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
